add screen selection dropdown and pending loader overlay in MediaConfiguration

--- a/studio.html
+++ b/studio.html
@@ -12,13 +12,11 @@
       <title>Studio</title>
 </head>
 <body>
-    <div id="root">
+    <div id="root"></div>
      <script
      type="module"
      src="/src/studio_main.tsx"
-     >
-     
-     </script>
-    </div>
+     ></script>
+  
 </body>
 </html>
