--- a/webcam.html
+++ b/webcam.html
@@ -13,12 +13,13 @@
 </head>
 <body>
     <div id="root">
+        </div>
      <script
      type="module"
-     src="/src/webcam_main.tsx"
+     src="/src/web_cam_main.tsx"
      >
      
      </script>
-    </div>
+    
 </body>
 </html>
